Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ a{
 
 
 @media screen and (max-width: 500px) {
-    body {
+    html {
         position: absolute;
         top: 0;
         left: 0;
